--- a/1-1.html
+++ b/1-1.html
@@ -29,10 +29,11 @@
 <BR><HR><H2>Kodatunoとは</H2>
 
 　Kodatunoは純国産のマルチプラットフォームなオープンソースCAMカーネルを目指し開発中の
-ソフトウェアです．マルチプラットフォーム環境を確保するため，開発言語はC/C++を用いてお
+ソフトウェアです．種々のCAMアプリケーションを構築するための様々な関数をライブラリとして提供します．
+<BR><BR>　マルチプラットフォーム環境を確保するため，開発言語はC/C++を用いてお
 り，3D描画用APIにOpenGL GLUTを用いています．また更に，R1.1からは高機能GUIアプリケーション開発環境である
 Wide StudioをGUIとして用いています．R2.0では，WideStudioをGUIに用いたVersion（W/S Ver）及び，
-OpenGLのみを用いたVersion（N/G Ver）の両方を同包しています．<BR>
+OpenGLのみを用いたVersion（N/W Ver）の両方を同包しています．<BR><BR>
 　本ソフトウェアは，CADデータの中間フォーマ
 ットであるIGES(JAMA-IS V1.04)をサポートしています．このIGESデータ
 を構成する全ての曲線・曲面エンティティは，内部表現としてNURBSに変換され，保持される構
@@ -75,12 +76,14 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 <LI>2011/11 Kodatuno R2.0　　　バグ修正，機能強化<BR>
 <LI>2012/05 Kodatuno R2.1　　　バグ修正<BR>
 <LI>2013/01 Kodatuno R2.2　　　バグ修正，機能強化，機能の一部変更<BR>
+<LI>2013/07 Kodatuno R2.3　　　バグ修正<BR>
 
 </LI></UL>
 
 <BR><H3>クレジット</H3>
   総指揮：浅川直紀（金沢大学）<BR>
-  開発コアチーム：高杉敬吾（金沢大学）<BR>
+  開発コアチーム：高杉敬吾（金沢工業大学）<BR>
+  　　　　　　　　 　　鬼頭亮太（金沢大学）<BR>
 
 <BR><BR><H3>謝辞</H3>
   本システムの基礎開発に尽力いただいた元マンマシン研究室の西野高志，松本健児，三枝史岳，熊坂拓也の
@@ -92,7 +95,7 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 の責任においてご使用ください．
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./index.html">index</A>
 <A HREF="./1-2.html">Next</A><br>
 </center> <hr> <table cellpadding="0" cellspacing="0" border="0" width="100%">    
@@ -101,7 +104,7 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR>
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
