--- a/2-2.html
+++ b/2-2.html
@@ -27,17 +27,18 @@
 </table> 
 <blockquote> 
 
-<BR><HR><H2>Kodatuno¤òÆ°¤«¤·¤Æ¤ß¤è¤¦</H2>
+<BR><HR><H2>Kodatuno¤ò»È¤Ã¤Æ¤ß¤è¤¦</H2>
 
-¡¡Kodatuno¤Îµ¯Æ°¤«¤é¼Â¹Ô¤Þ¤Ç¤Î¼ê½ç¤ò°Ê²¼¤Ë¼¨¤·¤Þ¤¹¡¥(³«È¯´Ä¶­¤Î¹½ÃÛ¤Ï½ªÎ»¤·¤Æ¤¤¤ë¤â¤Î¤È¤·¤Þ¤¹¡¥)<BR>
-¡¡Kodatuno¤Ë¤Ï¡¤<A HREF="./1-1.html">1.1 Kodatuno¤È¤Ï</A> ¤Ç½Ò¤Ù¤¿¤È¤ª¤ê¡¤GUI¤¬´û¤Ë¼ÂÁõ¤µ¤ì¤¿W/S Ver.¤È¡¤
-GUI¤¬¼ÂÁõ¤µ¤ì¤Æ¤¤¤Ê¤¤N/G Ver.¤ÎÆó¤Ä¤¬¤¢¤ê¤Þ¤¹¡¥N/G Ver.¤ÏGUI¼ÂÁõ¤¬Ìµ¤¤Ê¬¥½¡¼¥¹¿ô¤Ï¾¯¤Ê¤¤¤Ç¤¹¤¬¡¤Kodatuno¤¬
+¡¡Kodatuno¤¬»ý¤Ä¼ï¡¹¤Î´ö²¿±é»»¥é¥¤¥Ö¥é¥ê¤ò´ÊÃ±¤ËÍøÍÑ¤¹¤ë¤¿¤á¡¤GUI¤¬¼ÂÁõºÑ¤ß¤Î¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤ò2¼ïÎàÄó¶¡¤·¤Þ¤¹¡¥<BR>
+¤É¤Á¤é¤âÉÁ²è¤Ë¤ÏOpenGL¤òÍÑ¤¤¤Æ¤¤¤Þ¤¹¤¬¡¤¥ª¡¼¥×¥ó¥½¡¼¥¹¤Î¥¦¥£¥¸¥§¥Ã¥È¡ÊWideStudio¡Ë¤¬´û¤Ë¼ÂÁõ¤µ¤ì¤¿W/S Ver.¤È¡¤
+¥¦¥£¥¸¥§¥Ã¥È¤¬¼ÂÁõ¤µ¤ì¤Æ¤¤¤Ê¤¤N/W Ver.¤¬¤¢¤ê¤Þ¤¹¡¥N/W Ver.¤Ï¥¦¥£¥¸¥§¥Ã¥È¼ÂÁõ¤¬Ìµ¤¤Ê¬¥½¡¼¥¹¿ô¤Ï¾¯¤Ê¤¤¤Ç¤¹¤¬¡¤Kodatuno¤¬
 Äó¶¡¤¹¤ë¥â¥¸¥å¡¼¥ë¤òÁÈ¤ß¹ç¤ï¤»¤ÆCAM¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤òºîÀ®¤¹¤ë¤¿¤á¤Î¥æ¡¼¥¶¡¼¥¤¥ó¥¿¡¼¥Õ¥§¡¼¥¹¤â¾¯¤Ê¤¤¤¿¤á¡¤
 Kodatuno¤òÆâÉô¤Þ¤ÇÍý²ò²ÄÇ½¤Ê¾åµé¼Ô¸þ¤±¤Î¥Ð¡¼¥¸¥ç¥ó¤È¤Ê¤ê¤Þ¤¹¡¥<BR>
-¡¡¤Þ¤º¤Ï¡¤W/S Ver. ¤Ë´·¤ì¤Æ¤¤¤¿¤À¤­¡¤¥«¡¼¥Í¥ëÉô¤Ë¤Þ¤ÇÊÑ¹¹¤ò²Ã¤¨¤¿¤¤¾õ¶·¤Ë¤Ê¤Ã¤¿¾ì¹ç¤ÏN/G Ver. ¤òÍøÍÑÄº¤¯¤³¤È¤ò
+¡¡¤Þ¤º¤Ï¡¤W/S Ver. ¤Ë´·¤ì¤Æ¤¤¤¿¤À¤­¡¤¥«¡¼¥Í¥ëÉô¤Ë¤Þ¤ÇÊÑ¹¹¤ò²Ã¤¨¤¿¤¤¾õ¶·¤Ë¤Ê¤Ã¤¿¾ì¹ç¤ÏN/W Ver. ¤òÍøÍÑÄº¤¯¤³¤È¤ò
 ¤ª´«¤á¤·¤Þ¤¹¡¥¤è¤Ã¤Æ¤³¤ì°Ê¹ß¤ÏW/S Ver.¤ò¥á¥¤¥ó¤È¤·¤¿¥æ¡¼¥¶¡¼¥º¥¬¥¤¥É¤È¤Ê¤Ã¤Æ¤¤¤Þ¤¹¤Î¤Ç¡¤¤´Î»¾µ¤¯¤À¤µ¤¤¡¥
 
-
+¡¡¤ò»È¤Ã¤¿¥µ¥ó¥×¥ë¥¢¥×¥ê¥±¡¼¥·¥ç¥ó¤Îµ¯Æ°¤«¤é¼Â¹Ô¤Þ¤Ç¤Î¼ê½ç¤ò°Ê²¼¤Ë¼¨¤·¤Þ¤¹¡¥(³«È¯´Ä¶­¤Î¹½ÃÛ¤Ï½ªÎ»¤·¤Æ¤¤¤ë¤â¤Î¤È¤·¤Þ¤¹¡¥)<BR>
+¡¡
 <UL>
 <LI>Kodatuno¤ÎÆþ¼ê<BR><BR>
 ²¼µ­URL¤è¤êKodatuno R***¤ò¥À¥¦¥ó¥í¡¼¥É¤·¤Þ¤¹¡¥<BR><BR>
@@ -47,7 +48,7 @@ http://www-mm.hm.t.kanazawa-u.ac.jp/research/kodatuno/<BR><BR>
 
 <BR><BR><LI>OpenGL glut.h¤Î¥¤¥ó¥¯¥ë¡¼¥ÉÀè»ØÄê<BR><BR>
 »ÈÍÑ¤¹¤ëOS¤Ë¤è¤Ã¤Æglut.h¤Î¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤¬°Û¤Ê¤ê¤Þ¤¹¡¥¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¤"Kodatun R***"-->
-"00_No GUI Ver"-->"Src"¤¢¤ë¤¤¤Ï"01_WideStudio Ver"-->"Src"¤ÈÃ©¤ê¡¤"StdAfx.h"¤ò³«¤¤¤Æ¤¯¤À¤µ¤¤¡¥¥Ç¥Õ¥©¥ë¥È¤ÎÀßÄê¤Ï¼¡¤Î¤è¤¦¤Ë
+"No Wdget"¤¢¤ë¤¤¤Ï"WS"¤ÈÃ©¤ê¡¤"StdAfx.h"¤ò³«¤¤¤Æ¤¯¤À¤µ¤¤¡¥¥Ç¥Õ¥©¥ë¥È¤ÎÀßÄê¤Ï¼¡¤Î¤è¤¦¤Ë
 Windows¤ËÂÐ±þ¤·¤¿¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤Ë¤Ê¤Ã¤Æ¤¤¤Þ¤¹¡¥
 <P><CENTER>
 <P><CENTER><IMG SRC="pixmaps/glut header source.jpg"></CENTER></P>
@@ -59,7 +60,7 @@ Windows¤ËÂÐ±þ¤·¤¿¥¤¥ó¥¯¥ë¡¼¥ÉÀè¤Ë¤Ê¤Ã¤Æ¤¤¤Þ¤¹¡¥
 <LI>Wide Studio¤Îµ¯Æ°¡¤Kodatuno¥×¥í¥¸¥§¥¯¥È¤ÎÆÉ¤ß¹þ¤ß<BR><BR>
 Wide Studio¤òµ¯Æ°¤·¤Þ¤¹¡¥<BR>
 ¥Ä¡¼¥ë¥Ð¡¼¤«¤é¡¤"¥×¥í¥¸¥§¥¯¥È¤ÎÆÉ¤ß¹þ¤ß"¤òÁªÂò¤¹¤ë¤È¡¤¥Õ¥¡¥¤¥ëÁªÂò¥À¥¤¥¢¥í¥°¤¬É½¼¨¤µ¤ì¤Þ¤¹¡¥
-¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¤"Kodatuno R***"-->"01_WideStudio Ver"-->"Src"¤ÈÃ©¤ë¤È¡¤"Kodatuno.prj"¤Ê¤ë
+¥À¥¦¥ó¥í¡¼¥É¤·²òÅà¤·¤¿Kodatuno¥Õ¥©¥ë¥À¤«¤é¡¤"Kodatuno R***"-->"WS"¤ÈÃ©¤ë¤È¡¤"Kodatuno.prj"¤Ê¤ë
 Wide StudioÀìÍÑ¤Î¥×¥í¥¸¥§¥¯¥È¥Õ¥¡¥¤¥ë¤¬¤¢¤ê¤Þ¤¹¤Î¤Ç¡¤¤³¤ì¤òÁªÂò¤·"OK"¡¥¤³¤ì¤ÇWide Studio¤ËKodatuno¤¬
 ÆÉ¤ß¹þ¤Þ¤ì¤¿¤³¤È¤Ë¤Ê¤ê¤Þ¤¹¡¥<BR><BR>
 
@@ -79,12 +80,12 @@ Wide Studio¤Î¥á¥Ã¥»¡¼¥¸¥À¥¤¥¢¥í¥°¤ÎºÇ²¼¹Ô¤Ë"½ªÎ»¤·¤Þ¤·¤¿¡¥"¤¬É½¼¨¤µ¤ì¤¿¤é¡¤¥³¥ó¥
 <BR><BR>
 
 <UL>¢¨ No GUI Version (Wide Studio¤òÍÑ¤¤¤Ê¤¤Version)¤ÎÆ°ºî³ÎÇ§<BR><BR>
-¡¡½êÄê¤Î¥³¥ó¥Ñ¥¤¥é¡¼¤òÍÑ¤¤¤Æ"Kodatuno R***"-->"00_No GUI Ver"-->"Src"¤Ë¤¢¤ë¥½¡¼¥¹¤òÁ´¤Æ¥³¥ó¥Ñ¥¤¥ë¤·¡¤
+¡¡½êÄê¤Î¥³¥ó¥Ñ¥¤¥é¡¼¤òÍÑ¤¤¤Æ"Kodatuno R***"-->"No Wdget"¤Ë¤¢¤ë¥½¡¼¥¹¤òÁ´¤Æ¥³¥ó¥Ñ¥¤¥ë¤·¡¤
 ¼Â¹Ô¥Õ¥¡¥¤¥ë¤òÀ¸À®¤·¤Æ¤¯¤À¤µ¤¤¡¥gcc¤ò¤ª»È¤¤¤Î¾ì¹ç¤Ï¡¤Æ±¥Õ¥©¥ë¥ÀÆâ¤Ë¤¢¤ëmake¥Õ¥¡¥¤¥ë¤òÍøÍÑ¤¯¤À¤µ¤¤¡¥
 </UL>
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./2-1.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-3.html">Next</A><br>
@@ -94,7 +95,7 @@ Wide Studio¤Î¥á¥Ã¥»¡¼¥¸¥À¥¤¥¢¥í¥°¤ÎºÇ²¼¹Ô¤Ë"½ªÎ»¤·¤Þ¤·¤¿¡¥"¤¬É½¼¨¤µ¤ì¤¿¤é¡¤¥³¥ó¥
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
