--- a/2-5.html
+++ b/2-5.html
@@ -94,7 +94,7 @@ BODYепеще╣д╦дшд├д╞┼¤│чд╡дьд╞ддд▐д╣бе*BodyListд╧еъе╣е╚▓╜д╡дьд┐Bodyд╪д╬е▌едеєе┐д╟д
 бб└шд█д╔дт╜╥д┘д┐д╚дкдъбд░·┐Їд╧╔мд║╕╟─ъд╖д╩д▒дьд╨д╩дъд▐д╗дєбе<BR>
 ббе│еєе╜б╝еыд╪д╬╩╕╗·╬є╜╨╬╧д╧SetMessage()┤╪┐ЇдЄ╗╚ддд▐д╣бе42б┴49╣╘╠▄д╟д╧"User Status"е└едевеэе░д╟д╬└▀─ъ╛Ё╩єдЄ╝шдъ╜╨д╖бд╜╨╬╧д╖д╞ддд▐д╣бе
 54╣╘╠▄д╟д╧ExecSampleFunc0()д╬░·┐ЇPickCountдЄ╜╨╬╧д╖д╞ддд▐д╣бе57╣╘╠▄░╩╣▀д╟д╧бде╘е├епд╖д┐┐Ї╩мд╬еке╓е╕езепе╚д╬╛Ё╩єдЄ╜╨╬╧д╖д╞ддд▐д╣бе<BR>
-i╚╓╠▄д╦е╘е├епд╡дьд┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝ш╞└д╣дыд╦д╧58╣╘╠▄д╬дшджд╦╡н╜╥д╖д▐д╣бед│д╬╡н╜╥д╬░╒╠гд╧▓Є└тд╖д▐д╗дєд╬д╟бдд╧дкд▐д╕д╩ддд╚д╖д╞│╨дид╞д╖д▐д├д╞дпд└д╡ддбе
+i╚╓╠▄д╦е╘е├епд╡дьд┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝ш╞└д╣дыд╦д╧58╣╘╠▄д╬дшджд╦╡н╜╥д╖д▐д╣бед│д╬╡н╜╥д╬░╒╠гд╧▓Є└тд╖д▐д╗дєд╬д╟бд58╣╘╠▄д╧дкд▐д╕д╩ддд╚д╖д╞│╨дид╞д╖д▐д├д╞дпд└д╡ддбе
 д╩дкбдOBJECT╣╜┬д┬╬д╧"BODY.h"д╬194╣╘╠▄д╦╡н╜╥д╡дьд╞ддд▐д╣бе
 
 <P><CENTER><IMG SRC="pixmaps/OBJECT_Structure.jpg"></CENTER></P>
@@ -109,7 +109,7 @@ i╚╓╠▄д╦е╘е├епд╡дьд┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝ш╞└д╣дыд╦д╧58╣╘╠▄д╬дшджд╦╡н╜╥д╖д▐д╣бед│д
 
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./2-4.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-6.html">Next</A><br>
@@ -119,7 +119,7 @@ i╚╓╠▄д╦е╘е├епд╡дьд┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝ш╞└д╣дыд╦д╧58╣╘╠▄д╬дшджд╦╡н╜╥д╖д▐д╣бед│д
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
