--- a/2-6-2.html
+++ b/2-6-2.html
@@ -58,7 +58,7 @@
 ббе╘е├епд╖д┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝шдъ╜╨д╖д┐╕хбдд╜д╬╛Ё╩єдЄ╕╡д╦Bodyд╬╝┬┬╬дЄ░·д├─ед├д╞днд▐д╣бед╜дьдм40╣╘╠▄д╟д╣бе
 OBJECT╣╜┬д┬╬д╬есеєе╨б╝╩╤┐ЇBodyд╦д╧е╘е├епд╖д┐еке╓е╕езепе╚дм┬░д╣дыBodyд╬едеєе╟е├епе╣╚╓╣цдм╞■д├д╞ддд▐д╣бе
 д│д╬едеєе╟е├епе╣╚╓╣цд╬BodyдЄBODYListдлдщ╝шдъ╜╨д╖д╞ддд▐д╣бе
-д│д╬39бд40╣╘╠▄д╬2╣╘д╧е╗е├е╚д╟╗╚джд│д╚дмд█д╚дєд╔д╟д╣беC╕└╕ьд╦╝л┐╚д╬д╩дд┐═д╧д╚дъдвдид║д│д╬2╣╘д╧дкд▐д╕д╩ддд╚д╖д╞д╖д▐д├д╞дпд└д╡ддбе<BR>
+д│д╬39бд40╣╘╠▄д╬2╣╘д╧е╗е├е╚д╟╗╚джд│д╚дмд█д╚дєд╔д╟д╣беC╕└╕ьд╦╝л┐од╬д╩дд┐═д╧д╚дъдвдид║д│д╬2╣╘д╧дкд▐д╕д╩ддд╚д╖д╞д╖д▐д├д╞дпд└д╡ддбе<BR>
 ббBodyд╬╝┬┬╬дЄ╝шдъ╜╨д╖д┐дщбддвд╚д╧д╜д╬Bodyд╬есеєе╨б╝┤╪┐ЇдЄ═╤ддд╞еве╒егеє╩╤┤╣дЄ┼м╡╣╣╘джд└д▒д╟д╣бе<BR>
 <UL>
 <LI>BODY::RotBody()д╧╗╪─ъд╖д┐╝┤╝■дъд╦╗╪─ъ│╤┼┘BodyдЄ▓є┼╛д╡д╗д▐д╣бе<BR>
@@ -74,7 +74,7 @@ CoordдЄ╗╚д├д┐╝яб╣д╬╖╫╗╗д╧"StdAfx.h"д╦длд╩дъ┬┐дп═╤░╒д╖д╞ддд▐д╣д╬д╟бд░ь─╠дъ╕лд╞дкд
 д▐д║д╧бдNURBS╢╩└■д╦┬╨д╖д╞╗╪─ъд╖д┐╩м│ф┐Їд╟╩м│фд╖д┐д╚днд╬╩м│ф┼└дЄ└╕└од╣ды╩¤╦бдЄ╝ид╖д▐д╣бе
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./2-6-1.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-6-3.html">Next</A><br>
@@ -84,7 +84,7 @@ CoordдЄ╗╚д├д┐╝яб╣д╬╖╫╗╗д╧"StdAfx.h"д╦длд╩дъ┬┐дп═╤░╒д╖д╞ддд▐д╣д╬д╟бд░ь─╠дъ╕лд╞дкд
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
