--- a/2-6-4.html
+++ b/2-6-4.html
@@ -50,30 +50,30 @@
 <P><CENTER><IMG SRC="pixmaps/UserFunc_SmpNearestPt2.jpg"></CENTER></P>
 
 бб║г▓єд╧╠є50╣╘д╚дфдф─╣дсд╟д╣дмбдд█д╚дєд╔дмд│дьд▐д╟д╬╬у┬ъд╟┤√╜╨д╬е│б╝е╔д╟д╣д╬д╟бд╞ёд╖дпд╧д╩ддд╚╗╫ддд▐д╣бе<br>
-бб83╣╘╠▄д╧╬уд╦дшд├д╞е▌елдшд▒д╟д╣бе<BR>
-бб85б┴92╣╘╠▄д╟д╧╔м═╫д╩╩╤┐Їд╬─ъ╡┴дЄ╣╘д├д╞ддд▐д╣бе┬ч╚╛д╧╞├д╦╠ф┬ъд╩ддд╚╗╫ддд▐д╣дмбд86╣╘╠▄д╟д╧е╘е├епд╡дьд┐NURBS╢╩╠╠д╬╝┬┬╬дЄ│╩╟╝д╣ды╚вдЄ═╤░╒д╖д╞ддд▐д╣бе<BR>
-бб94, 95╣╘╠▄дтд│дьд▐д╟д╚╞▒д╕д╟д╣бе░ь╚╓║╟╜щд╦е╘е├епд╖д┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝шдъ╜╨д╖бдд╜д╬еке╓е╕езепе╚дм┬░д╣дыBodyд╬╝┬┬╬дЄ╝ш╞└д╖д╞ддд▐д╣бе<BR>
-бб100б┴108╣╘╠▄д╟д╧бде╘е├епд╖д┐еке╓е╕езепе╚дм▓┐д╩д╬длд╦дшд├д╞╛Є╖я╩м┤ЇдЄд╖д╞ддд▐д╣бе(Ex. 3)д╟д╧NURBS╢╩└■дЄ╝шдъ╜╨д╣д┐дсбд
+бб81╣╘╠▄д╧╬уд╦дшд├д╞е▌елдшд▒д╟д╣бе<BR>
+бб83б┴89╣╘╠▄д╟д╧╔м═╫д╩╩╤┐Їд╬─ъ╡┴дЄ╣╘д├д╞ддд▐д╣бе┬ч╚╛д╧╞├д╦╠ф┬ъд╩ддд╚╗╫ддд▐д╣бе<BR>
+бб91, 92╣╘╠▄дтд│дьд▐д╟д╚╞▒д╕д╟д╣бе░ь╚╓║╟╜щд╦е╘е├епд╖д┐еке╓е╕езепе╚д╬╛Ё╩єдЄ╝шдъ╜╨д╖бдд╜д╬еке╓е╕езепе╚дм┬░д╣дыBodyд╬╝┬┬╬дЄ╝ш╞└д╖д╞ддд▐д╣бе<BR>
+бб97б┴105╣╘╠▄д╟д╧бде╘е├епд╖д┐еке╓е╕езепе╚дм▓┐д╩д╬длд╦дшд├д╞╛Є╖я╩м┤ЇдЄд╖д╞ддд▐д╣бе(Ex. 3)д╟д╧NURBS╢╩└■дЄ╝шдъ╜╨д╣д┐дсбд
 if(obj->Type == _NURBSC)...д╚дддже│б╝е╟егеєе░дЄ╣╘ддд▐д╖д┐бе║г▓єд╧NURBS╢╩╠╠дЄ╞▒══д╬┴р║юд╟╝шдъ╜╨д╣д│д╚дЄд╖д▐д╣бе(Ex. 3)д╬▓Є└тд╟дт╜ёднд▐д╖д┐дмбд
 Kodatunoд╟д╬╠╠д╬╝шдъ░╖ддд╧бд11:_NURBSS, 13:_TRIMMED_SURFACEд╬2д─дм┬╕║▀д╖д▐д╣бее╚еъер╠╠д╧<A HREF="./1-4.html">1.4 Kodatuno╞т╔Їд╟д╬CADе╟б╝е┐д╬╣╜┬д</A>
 д╟└т╠└д╖д┐дшджд╦бддфдф╩г╗ид╩│м┴╪╣╜┬дд╦д╩д├д╞ддд▐д╣дмбд╕╡дЄ├йдьд╨дфд╧дъ┴┤д╞NURBS╢╩└■/╢╩╠╠д╟╔╜╕╜д╡дьд╞ддд▐д╣бе<BR>
 бб╕╜╗■┼└д╟д╧двд▐дъе╚еъер╠╠д╬╩г╗ид╩│м┴╪╣╜┬дд╬д│д╚д╧╣═дид║д╦бде╚еъерд╡дьд┐NURBS╢╩╠╠д╩д╬длбде╚еъерд╡дьд╞ддд╩дд┴╟д╬NURBS╢╩╠╠д╩д╬длбдд╧д┐д▐д┐┴┤дп░удждтд╬
-дЄ┴к┬Єд╖д╞д╖д▐д├д┐д╬длбддЄд│д╬╛Є╖я╩м┤Їд╦дшд├д╞╚╜─ъд╖д╞ддд▐д╣бедтд╖бде╚еъерд╡дьд┐NURBS╢╩╠╠д╟двд├д┐╛ь╣чд╧бде╚еъерд╡дьды┴░д╬е┘б╝е╣д╬NURBS╢╩╠╠дЄ101╣╘╠▄д╬
-┴р║юд╦дшд├д╞╝шдъ╜╨д╖д╞ддд▐д╣бед▐д┐бде╚еъерд╡дьд╞ддд╩дд┴╟д╬NURBS╢╩╠╠д╬╛ь╣чд╧бд104╣╘╠▄д╦╝ид╣┴р║юд╦дшд├д╞е╘е├епд╡дьд┐NURBS╢╩╠╠дЄ╝шдъ╜╨д╣д│д╚дмд╟днд▐д╣бе<BR>
-бб111б┴114╣╘╠▄д╟д╧╟д░╒д╬╗░╝б╕╡║┬╔╕├═дЄ3д──ъ╡┴д╖д╞ддд▐д╣бе╦▄╬уд╟д╧д│д╬3д─д╬┼└длдщд╬║╟╢с╦╡┼└дЄ╗╗╜╨д╖д▐д╣бе
-117╣╘╠▄дшдъбдд│д╬3д─д╬┼└д╦┬╨д╖╜ч╚╓д╦║╟╢с╦╡┼└дЄ╗╗╜╨д╖д╞ддднд▐д╣бе║╟╢с╦╡┼└д╬╗╗╜╨д╧119╣╘╠▄д╦╜ёдлдьд┐бдNURBS_Func::CalcIntersecPtNurbsPt()┤╪┐Їд╦дшд├д╞
+дЄ┴к┬Єд╖д╞д╖д▐д├д┐д╬длбддЄд│д╬╛Є╖я╩м┤Їд╦дшд├д╞╚╜─ъд╖д╞ддд▐д╣бедтд╖бде╚еъерд╡дьд┐NURBS╢╩╠╠д╟двд├д┐╛ь╣чд╧бде╚еъерд╡дьды┴░д╬е┘б╝е╣д╬NURBS╢╩╠╠дЄ98╣╘╠▄д╬
+┴р║юд╦дшд├д╞╝шдъ╜╨д╖д╞ддд▐д╣бед▐д┐бде╚еъерд╡дьд╞ддд╩дд┴╟д╬NURBS╢╩╠╠д╬╛ь╣чд╧бд101╣╘╠▄д╦╝ид╣┴р║юд╦дшд├д╞е╘е├епд╡дьд┐NURBS╢╩╠╠дЄ╝шдъ╜╨д╣д│д╚дмд╟днд▐д╣бе<BR>
+бб108б┴111╣╘╠▄д╟д╧╟д░╒д╬╗░╝б╕╡║┬╔╕├═дЄ3д──ъ╡┴д╖д╞ддд▐д╣бе╦▄╬уд╟д╧д│д╬3д─д╬┼└длдщд╬║╟╢с╦╡┼└дЄ╗╗╜╨д╖д▐д╣бе
+114╣╘╠▄дшдъбдд│д╬3д─д╬┼└д╦┬╨д╖╜ч╚╓д╦║╟╢с╦╡┼└дЄ╗╗╜╨д╖д╞ддднд▐д╣бе║╟╢с╦╡┼└д╬╗╗╜╨д╧116╣╘╠▄д╦╜ёдлдьд┐бдNURBS_Func::CalcIntersecPtNurbsPt()┤╪┐Їд╦дшд├д╞
 ╣╘дядьд▐д╣бе╗╗╜╨д╦└о╕∙д╣дыд╚бдCoord Qд╦║╟╢с╦╡┼└д╬║┬╔╕├═дм╜╨╬╧д╡дьд▐д╣бед│д│д╟├э░╒д╖д╩д▒дьд╨д╩дщд╩ддд│д╚д╧бдQд╦д╧3╝б╕╡╢ї┤╓║┬╔╕├═(x,y,z)д╟д╧д╩дпбд
-NURBS╢╩╠╠Sд╬е╤ещесб╝е┐├═(u,v)дмQ.xдкдшд╙Q.yд╦д╜дьд╛дь│╩╟╝д╡дьдыд╚ддджд│д╚д╟д╣бедшд├д╞3╝б╕╡╢ї┤╓║┬╔╕├═дЄ╞└д┐дд╛ь╣чд╧бд121╣╘╠▄д╦╝ид╣NURBS_Func::CalcNurbsSCoord()
+NURBS╢╩╠╠Sд╬е╤ещесб╝е┐├═(u,v)дмQ.xдкдшд╙Q.yд╦д╜дьд╛дь│╩╟╝д╡дьдыд╚ддджд│д╚д╟д╣бедшд├д╞3╝б╕╡╢ї┤╓║┬╔╕├═дЄ╞└д┐дд╛ь╣чд╧бд118╣╘╠▄д╦╝ид╣NURBS_Func::CalcNurbsSCoord()
 ┤╪┐ЇдЄ╝┬╣╘д╖д╩д▒дьд╨д╩дъд▐д╗дєбед│д╬┤╪┐Їд╧╗╪─ъд╖д┐(u,v)е╤ещесб╝е┐д╦дкд▒ды3╝б╕╡║┬╔╕├═(x,y,z)дЄ╩╓д╣┤╪┐Їд╟д╣бе<BR>
-бб╔┴▓шд╧бд╟д░╒д╬3┼└дЄ└╓┐зд╟(118╣╘╠▄)бдS╛хд╬║╟╢с╦╡┼└дЄ└─┐зд╟(122╣╘╠▄б╦бдд╜д╖д╞д╜дьдщдЄд─д╩д░└■╩мдЄ╬╨┐зд╟(123╣╘╠▄)д╜дьд╛дь╔┴▓шд╖д╞ддд▐д╣бе<BR>
-ббд▐д┐бд║╟╢с╦╡┼└дм╕лд─длдщд╩длд├д┐╛ь╣чд╬еиещб╝╜ш═¤дЄ127╣╘╠▄░╩╣▀д╟╣╘д├д╞ддд▐д╣бе
+бб╔┴▓шд╧бд╟д░╒д╬3┼└дЄ└╓┐зд╟(115╣╘╠▄)бдS╛хд╬║╟╢с╦╡┼└дЄ└─┐зд╟(119╣╘╠▄б╦бдд╜д╖д╞д╜дьдщдЄд─д╩д░└■╩мдЄ╬╨┐зд╟(120╣╘╠▄)д╜дьд╛дь╔┴▓шд╖д╞ддд▐д╣бе<BR>
+ббд▐д┐бд║╟╢с╦╡┼└дм╕лд─длдщд╩длд├д┐╛ь╣чд╬еиещб╝╜ш═¤дЄ124╣╘╠▄░╩╣▀д╟╣╘д├д╞ддд▐д╣бе
 
 <BR><BR>
 бб░╩╛хд╟(Ex. 4)д╬▓Є└тдЄ╜к╬╗д╖д▐д╣бе╝бд╧NURBS╢╩╠╠д╦┬╨д╖д╞бдUVе╤ещесб╝е┐д╟┼∙┤╓│╓д╦╩м│фд╖д┐┼└дЄ└╕└од╣ды╬у┬ъд╟д╣бе
 
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./2-6-3.html">Prev</A>
 <A HREF="./index.html">index</A>
 <A HREF="./2-6-5.html">Next</A><br>
@@ -83,7 +83,7 @@ NURBS╢╩╠╠Sд╬е╤ещесб╝е┐├═(u,v)дмQ.xдкдшд╙Q.yд╦д╜дьд╛дь│╩╟╝д╡дьдыд╚ддджд│д╚д╟д╣бед
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>      
 	<td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
