--- a/3-9-2.html
+++ b/3-9-2.html
@@ -21,7 +21,7 @@
 <td width="20%" valign="bottom" align="right">          
 <A HREF="./3-8.html" TARGET="_top">Prev</A>     
 <A HREF="./index.html" TARGET="_top">Index</A>          
-<A HREF="./references.html" TARGET="_top">Next</A><br>     
+<A HREF="./4-1.html" TARGET="_top">Next</A><br>     
 </td>   
 </tr> 
 </table> 
@@ -920,7 +920,7 @@ typedef struct{
 </font></pre>
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./3-8.html" TARGET="_top">Prev</A>     
 <A HREF="./index.html" TARGET="_top">Index</A>          
 <A HREF="./references.html" TARGET="_top">Next</A><br>     
@@ -930,7 +930,7 @@ typedef struct{
 <small>Copyright(C) Kodatuno Development Team, 2011</small>      
 </td>      
 <td align="right">        
-		<small><i>Last modified: Nov. 11, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 </td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
