--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <H2>第2章 さあ始めよう</H2>
 <ul>
 	<LI><A HREF="2-1.html">2.1  環境構築 </A></LI>
-	<LI><A HREF="2-2.html">2.2  Kodatunoを動かしてみよう </A></LI>
+	<LI><A HREF="2-2.html">2.2  Kodatunoをつかってみよう </A></LI>
 	<LI><A HREF="2-3.html">2.3  各ウィンドウの名称と機能 </A></LI>
 	<LI><A HREF="2-4.html">2.4  W/S Versionが持つ機能 </A></LI>
 	<LI><A HREF="2-5.html">2.5  サンプルアプリケーションの実行とソース解説 1 (W/S Version) </A></LI>
@@ -80,17 +80,24 @@
 	<LI><A HREF="3-9.html">3.9  システム </A></LI>
 </ul>
 
+<h2>第4章 応用</h2>
+<ul>
+	<li><A HREF="4-1.html">4.1  各関数の実行例 </A></li>
+	<li><A HREF="4-2.html">4.2  アプリケーション実装例 </A></li>
+</ul>
+
+
 <A HREF="references.html"><H2>参考資料</H2></A>
 
 
-</blockquote> <HR> Document Release 2.0 for Kodatuno R2.0, Nov. 2011<P> <hr> <center>
+</blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
 <A HREF="./index.html">index</A></center> <hr> <table cellpadding="0" cellspacing="0" border="0" width="100%">    
 <tr>      
 	<td align="left">        
 		<small>Copyright(C) Kodatuno Development Team, 2011</small>      
 	</td>
 	<td align="right">        
-		<small><i>Last modified: Nov. 7, 2011</i></small>      
+		<small><i>Last modified: Jul. 11, 2013</i></small>      
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
