--- a/4-2.html
+++ b/4-2.html
@@ -19,34 +19,36 @@
 		<center>        
 		</td>       
 		<td width="20%" valign="bottom" align="right">     
-			<A HREF="./1-2.html">Prev</A>     
+			<A HREF="./4-1.html">Prev</A>     
 			<A HREF="./index.html">Index</A>
-			<A HREF="./1-4.html">Next</A><br>
+			<A HREF="./references.html">Next</A><br>
 		</td>   
 	</tr> 
 </table> 
 <blockquote> 
 
-<BR><HR><H2>Kodatuno内部表現の概要</H2>
-　KodatunoはCADデータの中間フォーマットであるIGESあるいはSTL形式のデータを読み込むことができます．ただし，
-CADでのIGES出力に際して，NURBS出力指定がオプションなどにより選択可能である場合は，そのように指定しなければなりません．<BR>
-　IGESフォーマットCADデータはIGESパーサーによってKodatuno内部表現に変換されます．IGESデータが持つ曲面情報は基本的には既に
-NURBS表現になっていないといけません．Kodatuno内部では，各立体データを"Body"と呼びます．また，複数のIGESデータを読み込んだ場合は，
-複数のBodyが生成され，これらBodyは"Body List"に登録されます．<BR>
-　各BodyはIGESデータのNURBS表現として保持されます．NURBS表現の種類としては，NURBS曲面，トリムドNURBS曲面，NURBS曲線の3つが存在します．
-Bodyを構成するこれら要素をオブジェクトと呼びます．<BR>
-　更に詳しい情報は<A HREF="1-4.html">1.4  Koudatuno内部でのCADデータの構成 </A>及び，
-　<A HREF="3-8.html">3.8  CADデータの内部表現 </A>を参照してください．
+<BR><HR><H2>アプリケーション実装例</H2>
+　Kodatunoを使ったアプリケーションの実装例として，ここでは以下の3つを紹介します．
+  <ul type="disc">
+  　<li>3xM/C用CAM</li><br>
+		<P><CENTER><IMG SRC="pixmaps/App3xcam.jpg"></CENTER></P>
+		　実際のCAMの場合，加工面から工具の中心点へオフセットさせた点が工具経路となり，いろいろと工夫が必要ですが，基本的には，
+		Kodatunoの関数を組み合わせることで実装可能です．<br><br>
 
-<P><CENTER>
-<P><CENTER><IMG SRC="pixmaps/InnerExpression.jpg"></CENTER></P>
-［Kodatuno内部表現］
-</CENTER></P>
+  　<li>リバースエンジニアリング</li><br>
+		<P><CENTER><IMG SRC="pixmaps/AppReverseEng.jpg"></CENTER></P>
+		　変位計などの，加工物の三次元座標値を測定する装置によって得られた点群データをNURBS補間することによって，補間曲面を得ることができます．
+		この例では,5000点の測定点を補間する3次のNURBS補間曲面を生成しています．<br><br>
+		
+  　<li>工具と工作物の干渉検出</li><br>
+		<P><CENTER><IMG SRC="pixmaps/AppCollDetect.jpg"></CENTER></P>
+		　この例では，1本のボールエンドミルを，工具中心点を支点として2方向に±30度振ったときの工作物との干渉の有無を見ています．ここでは，工具もNURBS曲面として
+		表現されており，NURBS曲面同士の干渉を検出する関数NURBS_Func::DetectInterfereTrmS()を用いています．<br><br>
+
 
 </blockquote> <HR> Document Release 2.3 for Kodatuno R2.3, Jul. 2013<P> <hr> <center>
-<A HREF="./1-2.html">Prev</A>
-<A HREF="./index.html">index</A>
-<A HREF="./1-4.html">Next</A><br>
+<A HREF="./4-1.html">Prev</A>
+<A HREF="./index.html">index</A><br>
 </center> <hr> <table cellpadding="0" cellspacing="0" border="0" width="100%">    
 <tr>      
 	<td align="left">        
@@ -57,3 +59,4 @@ Bodyを構成するこれら要素をオブジェクトと呼びます．<BR>
 	</td>   
 </tr> </table>  <!-- end of body --> </body>  
 </html>  
+
